--- a/server/.env
+++ b/server/.env
@@ -9,3 +9,4 @@ NODE_ENV='development'
 SMTP_USER=santoias26@gmail.com
 SMTP_PASS=rvvgpobjkqknyhpy 
 SENDER_MAIL=santoias26@gmail.com
+FRONTEND_URL=https://authentication-ix2s.onrender.com
