--- a/server/.env
+++ b/server/.env
@@ -1,7 +1,6 @@
 
 
-MONGODB_URI="mongodb+srv://santolbs26:Santhosh7418@cluster0.4zi7n.mongodb.net/mern-auth?retryWrites=true&w=majority&appName=Cluster0Add 
-"
+MONGODB_URI=""
 JWT_SECRET='secret#text'
 NODE_ENV='development'
 
